Version 1.4.1 - Fixed CSS layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ body{
    Paint Sample Card
 =========================== */
 
-..paint-card{
+.paint-card{
 
     width:100%;
 
